--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,5 +22,6 @@ services:
       - "3000:3000"
     volumes:
       - ./frontend:/app
+      - /app/node_modules
     stdin_open: true
     tty: true
