--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start_both_apps": "concurrently \"npm run start\" \"npm run start-django\"",
-    "start":  "react-scripts start",
+    "start": "react-scripts start",
     "start-django": "python3 ../backend/manage.py runserver 0.0.0.0:8000"
   },
   "eslintConfig": {
